# ISIS_Beam_Monitor

./: .gitignore  README.md  beam_state.py  codebase_documentation.md  config.ini.example  main.py  mcr_news.py  pyproject.toml  requirements-dev.txt  requirements.txt  review.md
.github/workflows/: python-app.yml
isis_monitor/: __init__.py  beam.py  config.py  mcr.py  notifiers.py  protocols.py  tui.py
isis_monitor/tests/: test_beam.py  test_config.py  test_main.py  test_mcr.py  test_notifiers.py  test_tui.py
