[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "isis-monitor"
version = "0.1.0"
description = "ISIS Facility Beam and MCR News Monitor"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9,<4",
    "websockets>=12,<14",
    "rich>=13,<14",
]

[project.scripts]
isis-monitor = "main:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]
